gccida/g1/assemble_start_function
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assemble_start_function/src/varasm.c:1687:24: error: use of undeclared identifier 'off_6F973A'
fprintf( asm_out_file, off_6F973A, 6514846LL); 
                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assemble_start_function/src/obj/varasm.o] Error 1
